--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,4 +1,3 @@
-// если вы хотите использовать sass-переменные - удалите root
 // colors
 :root {
   // base
@@ -10,11 +9,14 @@
   // colors
   --white-color: #fff;
   --black-color: #202020;
-  --light-color: #4EA8A8;
+  --black-color-07: #2121217c;
+  --light-color: #A173FF;
+  --light-def-color: #7E40FF;
   --default-color: #5500ff;
-  --dark-color: #5500ff;
+  --dark-color: #3600A6;
+  --dark-def-color: #5F30BF;
   --second-color: #853E03;
-  --second-light-color: #C27534;
+  --second-light-color: #FFE540;
 
   --default-cubic: cubic-bezier(.48,.38,.58,.91);
 }
