--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,4 +1,6 @@
 .header {
+  position: relative;
+  z-index: 3;
   background: var(--dark-color);
   width: 100%;
   height: 10vh;
@@ -28,5 +30,12 @@
     color: var(--white-color);
     font-family: 'Xdevilix';
     font-size: 36px;
+    transform: translateX(0) scale(1);
+    transition: color 300ms var(--default-cubic), transform 20s var(--default-cubic);
+
+    &.low-timer {
+      color: var(--second-color);
+      transform: translateX(-40vw) scale(2);
+    }
   }
 }
