--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -1,7 +1,7 @@
 .main {
   width: 100%;
   height: 90vh;
-  background: var(--light-color);
+  background: var(--black-color);
 
   &__container {
     width: 100%;
@@ -10,67 +10,56 @@
     justify-content: center;
     align-items: center;
   }
-
-  &__start-button {
-    width: 20vw;
-    height: 10vh;
-    background-color: var(--second-light-color);
-    border: none;
-    border-radius: 1.5vw;
-    color: var(--white-color);
-    font-family: 'Xdevilix';
-    font-size: 3vw;
-    box-shadow: 0px 0px 1px var(--black-color);
-    transition: all 300ms var(--default-cubic);
-    text-shadow: 0 0 0.5vh var(--black-color);
-
-    &:hover {
-      transform: scale(1.1);
-      background: var(--second-color);
-    }
-  }
 }
 
 #myCanvas {
   display: block;
+  position: relative;
+  top: -10vh;
+  z-index: 0;
 }
 
 #button {
-  font-family: 'Xdevilix';
   position: absolute;
+  z-index: 1;
+  font-family: 'Xdevilix';
   font-size: 1.5em;
   text-transform: uppercase;
   padding: 7px 20px;
   left: 50%;
-  width: 200px;
-  margin-left: -100px;
+  width: 20vw;
+  height: 10vh;
   top: 50%;
-  border-radius: 10px;
+  left: 40%;
+  border-radius: 1.5vh;
   color: white;
-  text-shadow: -1px -1px 1px rgba(0,0,0,0.8);
+  text-shadow: -1px -1px 1px var(--black-color);
   border: 5px solid transparent;
-  border-bottom-color: rgba(0,0,0,0.35);
-  background: #5500ff;
+  border-bottom-color: var(--black-color-07);
+  background: var(--default-color);
   cursor: pointer;
   outline: 0 !important;
-
   animation: pulse 1s infinite alternate;
   transition: background 0.4s, border 0.2s, margin 0.2s;
 }
+
 #button:hover {
-  background: hsla(220, 100%, 60%, 1);
+  background: var(--light-color);
   margin-top: -1px;
 
   animation: none;
 }
+
 #button:active {
   border-bottom-width: 0;
   margin-top: 5px;
 }
+
 @keyframes pulse {
   0% {
     margin-top: 0px;
   }
+
   100% {
     margin-top: 6px;
   }
