feat: new function

--- a/src/partials/game-zone.html
+++ b/src/partials/game-zone.html
@@ -1,4 +1,4 @@
-<section class="game-zone">
+<section class="game-zone hidden">
   <div class="game-zone__container container" id="game-zone">
     <button class="stop-button" data-target="stop-button">QUIT</button>
   </div>
