--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -8,10 +8,12 @@
 
   // colors
   --white-color: #fff;
+  --white-color-07: rgba(255, 255, 255, 0.775);
   --black-color: #202020;
   --black-color-07: #2121217c;
   --light-color: #A173FF;
   --light-def-color: #7E40FF;
+  --light-def-color-07: #7c40ffcf;
   --default-color: #5500ff;
   --dark-color: #3600A6;
   --dark-def-color: #5F30BF;
