--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,4 +7,5 @@
 @import "./components/header";
 @import "./components/main";
 @import "./components/game-zone";
+@import "./components/game-setting";
 
