feat: adptiv comlite

--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -20,7 +20,7 @@
   <meta name="application-name" content="@title">
   <meta name="msapplication-TileColor" content="#00aba9">
   <meta name="msapplication-TileImage" content="mstile-144x144.png">
-  <meta name="theme-color" content="#853E03">
+  <meta name="theme-color" content="#3600A6">
   <script defer src="js/main.js"></script>
   <title>@title</title>
 </head>
