--- a/src/scss/components/_game-setting.scss
+++ b/src/scss/components/_game-setting.scss
@@ -1,5 +1,4 @@
 .game-setting {
-  // display: none;
   position: absolute;
   z-index: 2;
   left: 0;
@@ -10,6 +9,10 @@
   opacity: 1;
   visibility: visible;
   transition: opacity 300ms var(--default-cubic), visibility 300ms var(--default-cubic);
+
+  @include mobile {
+    display: none;
+  }
 
   &.hidden {
     opacity: 0;
@@ -27,6 +30,10 @@
     background-color: var(--light-def-color-07);
     border-radius: 0.7vw;
     border-bottom: solid 2px var(--dark-color);
+
+    @include small-tablet {
+      height: 60%;
+    }
   }
 
   .form {
@@ -40,6 +47,10 @@
       color: var(--white-color);
       font-family: 'Xdevilix';
       font-size: 3em;
+
+      @include small-tablet {
+        font-size: 2em;
+      }
     }
 
     &__label {
@@ -51,9 +62,17 @@
         text-transform: uppercase;
         padding-left: 0.4vw;
 
+        @include small-tablet {
+          font-size: 1em;
+        }
+
         &-span {
           position: absolute;
           font-size: 0.7em;
+
+          @include small-tablet {
+            font-size: 0.5em;
+          }
         }
       }
     }
@@ -63,7 +82,7 @@
       display: flex;
       justify-content: start;
       align-items: center;
-      width: 15vw;
+      width: 17vw;
       height: 2.6em;
       background-color: var(--dark-color);
       padding: 0px 0.7vw;
@@ -73,6 +92,16 @@
       border: none;
       font-size: 1.5em;
       appearance: none;
+
+      @include tablet {
+        width: 23vw;
+      }
+
+      @include small-tablet {
+        width: 26vw;
+        height: 2em;
+        font-size: 1em;
+      }
 
       &::placeholder {
         color: var(--white-color-07);
@@ -112,6 +141,15 @@
       color: var(--dark-def-color);
       background-color: var(--black-color);
       transition: color 0.3s var(--default-cubic), background 0.5s var(--default-cubic);
+
+      @include tablet {
+        bottom: 6vh;
+      }
+
+      @include small-tablet {
+        position: fixed;
+        bottom: 5vh;
+      }
 
       &:hover {
         animation: stripes 0.75s infinite linear;
