--- a/src/partials/game-setting.html
+++ b/src/partials/game-setting.html
@@ -11,7 +11,7 @@
         <select class="form__select" name="form__select">
           <option value="1">easy</option>
           <option value="2">normal</option>
-          <option value="3">hard</option>
+          <option value="3">Hard</option>
         </select>
       </label>
       <button class="btn-reset form__btn">Start</button>
