--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -21,4 +21,23 @@
   --second-light-color: #FFE540;
 
   --default-cubic: cubic-bezier(.48,.38,.58,.91);
+
+  @media screen and (min-width: 1024px) and (max-width: 1439px) {
+    --content-width: 980px;
+    --container-offset: 30px;
+    --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
+  }
+
+  @media screen and (min-width: 400px) and (max-width: 1023px) {
+    --content-width: 708px;
+    --container-offset: 30px;
+    --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
+  }
+
+  @media screen and (min-width: 320px) and (max-width: 400px) {
+    --content-width: 90%;
+    --container-offset: 10px;
+    --container-width: calc(var(--content-width) + (var(--container-offset) * 2));
+  }
 }
+
