--- a/src/scss/components/_game-zone.scss
+++ b/src/scss/components/_game-zone.scss
@@ -1,5 +1,4 @@
 .game-zone {
-  // display: none;
   position: absolute;
   z-index: 2;
   left: 0;
@@ -10,6 +9,10 @@
   opacity: 1;
   visibility: visible;
   transition: opacity 300ms var(--default-cubic), visibility 300ms var(--default-cubic);
+
+  @include mobile {
+    display: none;
+  }
 
   &.hidden {
     opacity: 0;
@@ -50,16 +53,14 @@
 
       &:hover {
         animation: stripes 0.75s infinite linear;
-        background: linear-gradient(
-          45deg,
-          var(--dark-def-color) 25%,
-          var(--black-color) 25%,
-          var(--black-color) 50%,
-          var(--dark-def-color) 50%,
-          var(--dark-def-color) 75%,
-          var(--black-color) 75%,
-          var(--black-color)
-        );
+        background: linear-gradient(45deg,
+            var(--dark-def-color) 25%,
+            var(--black-color) 25%,
+            var(--black-color) 50%,
+            var(--dark-def-color) 50%,
+            var(--dark-def-color) 75%,
+            var(--black-color) 75%,
+            var(--black-color));
         background-size: 10px 10px;
         color: var(--second-light-color);
       }
@@ -69,6 +70,7 @@
       0% {
         background-position: 0 0;
       }
+
       100% {
         background-position: 50px 0;
       }
@@ -91,13 +93,22 @@
       outline: solid 6px #FFFFFF00;
       outline-offset: 30px;
 
+      @include tablet {
+        width: 7.48em;
+        height: 10.62em;
+      }
+
+      @include small-tablet {
+        width: 4.84em;
+        height: 6.876em;
+      }
+
       &__back {
         position: absolute;
         z-index: 1;
         width: 100%;
         height: 100%;
         background-image: url(../img/card-back.png);
-        // background-color: green;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -117,7 +128,6 @@
         width: 100%;
         height: 100%;
         background-image: url(../img/card-front.png);
-        // background-color: red;
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -135,9 +145,12 @@
         }
       }
 
-
       &:hover {
         transform: scale(1.07);
+
+        @include tablet {
+          transform: scale(1);
+        }
       }
 
       &.open {
@@ -145,6 +158,16 @@
         width: 8.312em;
         height: 11.808em;
         border-radius: 2vh;
+
+        @include tablet {
+          width: 7.48em;
+          height: 10.62em;
+        }
+
+        @include small-tablet {
+          width: 4.84em;
+          height: 6.876em;
+        }
 
         .card {
 
