--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,6 +5,15 @@
   width: 100%;
   height: 10vh;
 
+  @include small-tablet {
+    height: auto;
+    position: fixed;
+  }
+
+  @include mobile {
+    height: auto;
+  }
+
   &__container {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
@@ -19,6 +28,16 @@
     font-family: 'Xdevilix';
     font-size: 36px;
 
+    @include small-tablet {
+      grid-column: 1/5;
+      font-size: 34px;
+    }
+
+    @include mobile {
+      grid-column: 1/6;
+      font-size: 24px;
+    }
+
     & a {
       color: var(--white-color);
     }
@@ -32,6 +51,14 @@
     font-size: 36px;
     transform: translateX(0) scale(1);
     transition: color 300ms var(--default-cubic), transform 20s var(--default-cubic);
+
+    @include small-tablet {
+      font-size: 34px;
+    }
+
+    @include mobile {
+      font-size: 24px;
+    }
 
     &.low-timer {
       color: var(--second-color);
