--- a/src/scss/components/_main.scss
+++ b/src/scss/components/_main.scss
@@ -1,7 +1,7 @@
 .main {
   width: 100%;
   height: 90vh;
-  background: var(--black-color);
+  background: #0f0f0f;
 
   &__container {
     width: 100%;
@@ -9,6 +9,34 @@
     display: grid;
     justify-content: center;
     align-items: center;
+
+    .iphone {
+      display: none;
+      @include mobile {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 99;
+        width: 10em;
+        animation: iphone 1.5s linear infinite;
+
+      }
+
+      @keyframes iphone {
+        0% {
+          transform: rotateZ(0deg);
+        }
+
+        60% {
+          transform: rotateZ(-90deg);
+        }
+
+        100% {
+          transform: rotateZ(-90deg);
+        }
+
+      }
+    }
   }
 }
 
@@ -17,6 +45,10 @@
   position: relative;
   top: -10vh;
   z-index: 0;
+
+  @include mobile {
+    display: none;
+  }
 }
 
 #button {
@@ -25,7 +57,6 @@
   font-family: 'Xdevilix';
   font-size: 1.5em;
   text-transform: uppercase;
-  padding: 7px 20px;
   left: 50%;
   width: 20vw;
   height: 10vh;
@@ -41,6 +72,13 @@
   outline: 0 !important;
   animation: pulse 1s infinite alternate;
   transition: background 0.4s, border 0.2s, margin 0.2s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @include mobile {
+    display: none;
+  }
 }
 
 #button:hover {
