--- a/src/scss/mixins/_breakpoint.scss
+++ b/src/scss/mixins/_breakpoint.scss
@@ -13,19 +13,19 @@
 }
 
 @mixin tablet {
-  @media (max-width: (1024px)) {
+  @media screen and (min-width: 1024px) and (max-width: 1439px) {
     @content;
   }
 }
 
 @mixin small-tablet {
-  @media (max-width: (768px)) {
+  @media screen and (min-width: 400px) and (max-width: 1023px) {
     @content;
   }
 }
 
 @mixin mobile {
-  @media (max-width: (576px)) {
+  @media screen and (min-width: 320px) and (max-width: 400px) {
     @content;
   }
 }
